# miniengine

./: .bazelrc  .editorconfig  .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  MODULE.bazel  README.md  TODO.md
examples/triangle/: BUILD.bazel  TriangleExample.cpp
examples/triangle/shaders/: triangle_pixel.hlsl  triangle_vertex.hlsl
src/app/: BUILD.bazel
src/app/include/app/: Game.h
src/app/src/: AppMain.cpp  Game.cpp  MigiMain.cpp
src/foundation/: BUILD.bazel
src/foundation/include/fnd/: Assert.h  Input.h  Job.h  JobSemaphore.h  Log.h  MigiMain.h  Pimpl.h  PrimitiveTypes.h  Profiler.h  SpinLock.h  TaskQueue.h  Time.h  Util.h  Window.h
src/foundation/src/private/: JobSemaphore.cpp  JobSystem.cpp  JobSystem.h  Util.cpp  Window.cpp  WindowManager.cpp  WindowManager.h  main.cpp
src/framework/: BUILD.bazel
src/framework/include/fw/: DearImGuiManager.h  DefaultFramePipeline.h  FrameData.h  FrameManager.h  IFramePipeline.h  IGame.h  RenderDevice.h  Renderer.h  SwapChain.h
src/framework/shaders/: dear_imgui_pixel.hlsl  dear_imgui_vertex.hlsl
src/framework/src/private/: DearImGuiManager.cpp  DearImGuiRenderer.cpp  DearImGuiRenderer.h  DefaultFramePipeline.cpp  FrameManager.cpp  RenderDevice.cpp  Renderer.cpp  SwapChain.cpp
src/rhi/: BUILD.bazel
src/rhi/example/: TriangleExample.cpp
src/rhi/include/rhi/: RHI.h
src/rhi/src/DX12/private/: DX12RHI.cpp
src/rhi/src/Vulkan/private/: VulkanRHI.cpp
src/rhi/src/private/: DX12RHI.cpp
