load("@rules_cc//cc:defs.bzl", "cc_binary")
load("//build/rules:windows_app.bzl", "windows_app")

cc_binary(
    name = "app_binary",
    srcs = glob([
        "src/**/*.cpp",
        "include/app/*.h",
    ]),
    includes = ["include"],
    deps = [
        "//src/foundation",
        "//src/framework",
        "@msvc_toolchains//lib:kernel32",
        "@msvc_toolchains//lib:user32",
    ],
)

windows_app(
    name = "app",
    assets = "//src/framework:assets",
    binary = ":app_binary",
)
