load("@rules_cc//cc:defs.bzl", "cc_library")
load("//build/rules:asset_group.bzl", "asset_group")
load("//build/rules:shader.bzl", "shader_stage")

cc_library(
    name = "_private_includes",
    includes = ["src"],
    visibility = ["//visibility:private"],
)

cc_library(
    name = "framework",
    srcs = glob([
        "src/private/**/*.cpp",
        "src/private/**/*.h",
    ]),
    hdrs = glob([
        "include/imgui/*.h",
        "include/fw/*.h",
    ]),
    implementation_deps = [
        "_private_includes",
    ],
    includes = ["include"],
    visibility = ["//visibility:public"],
    deps = [
        "//src/foundation",
        "@msvc_toolchains//lib:d3d12",
        "@msvc_toolchains//lib:dxgi",
        "@msvc_toolchains//lib:imm32",
        "@msvc_toolchains//lib:kernel32",
        "@msvc_toolchains//lib:user32",
    ],
)

shader_stage(
    name = "dear_imgui_vertex",
    src = "shaders/dear_imgui_vertex.hlsl",
    stage = "vertex",
)

shader_stage(
    name = "dear_imgui_pixel",
    src = "shaders/dear_imgui_pixel.hlsl",
    stage = "pixel",
)

asset_group(
    name = "assets",
    srcs = [
        ":dear_imgui_pixel",
        ":dear_imgui_vertex",
    ],
    visibility = ["//visibility:public"],
)
